# llvm-mlu

./: .gitignore  .gitmodules  README  README.md  build-wram.sh  build.sh  env-cnrt.sh  vector_add.cpp
buildbot/: compile.py  configure.py  dependency.py
clang/docs/: Makefile.sphinx
clang/include/clang/: module.modulemap
clang/lib/AST/: ASTContext.cpp  TypePrinter.cpp
clang/lib/Basic/: Bang.cpp  CMakeLists.txt  Targets.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCall.cpp  CGDecl.cpp  CodeGenFunction.h  TargetInfo.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  Types.cpp
clang/lib/Frontend/: InitPreprocessor.cpp
clang/lib/Headers/: CMakeLists.txt  __clang_bang_builtin_vars.h  __clang_bang_cmath.h  __clang_bang_intrinsics.h  __clang_bang_libdevice_declares.h  __clang_bang_math_forward_declares.h  __clang_bang_math_tables.h  __clang_bang_runtime_wrapper.h  bang.h  bang_device_functions.h  bang_device_functions_decls.h  bang_device_functions_extra.h  bang_device_functions_math.h  bang_device_profile.h  bang_device_types.h  bang_grid.h  bang_math_decls.h  bang_pipeline.h  bang_runtime.h  (+1 more)
clang/utils/: bash-autocomplete.sh
libclc/: CMakeLists.txt  build_mlisa.sh  how_to_build_mlisa_libclc.txt
libclc/cmake/: CMakeLLAsmInformation.cmake  CTestTestfile.cmake  cmake_install.cmake
libclc/utils/: prepare-builtins.cpp
llvm/docs/: GettingStarted.rst  HowToBuildOnARM.rst  Makefile.sphinx  ScudoHardenedAllocator.rst
opencl/: CMakeLists.txt
samples/: CMakeLists.txt  acos.cpp  acos.cpp.bak  binary_op.h  cos.cpp  half.cpp  hello-sycl.cpp  local_mem.cpp  nram.cpp  scalar  scalar-nram.cpp  scalar.cpp  tensor  tensor.cpp  tensor.ll  unary_op.h  usm.cpp  workitem.cpp  wram  wram.cpp
samples/include/: binary_op.h  common.h  unary_op.h  vector_op.h
samples/libdevice/: abs.cpp  acos.cpp  acos.out  acosh.cpp  add.cpp  asin.cpp  asinh.cpp  atan.cpp  atanh.cpp  cbrt.cpp  ceil.cpp  cos.cpp  cos.out  cosh.cpp  erf.cpp  exp.cpp  floor.cpp  fmod.cpp  isclose.cpp  isfin.cpp  isfinite.cpp  isinf.cpp  isnan.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  lshift.cpp  max.cpp  min.cpp  mul.cpp  neg.cpp  pow.cpp  relu.cpp  round.cpp  rshift.cpp  rsqrt.cpp  sign.cpp  sin.cpp  sinh.cpp  (+6 more)
samples/mlu_builtin_func/: acos.cpp  acos.out  active_abs.cpp  active_exp.cpp  add.cpp  add.out  asin.cpp  asin.out  cos.cpp  cos.out  cosh.cpp  div.cpp  log.cpp  mlu_builtin_atomic_add.cpp  mul.cpp  mul.out  pow2.cpp  pow2.out  sin.cpp  sin.out  sinh.cpp  sinh.out  sqrt.cpp  sub.cpp  tanh.cpp
samples/scalar/: abs.cpp  acos.cpp  acosh.cpp  add.cpp  asin.cpp  asinh.cpp  atan.cpp  atanh.cpp  cbrt.cpp  ceil.cpp  cos.cpp  cosh.cpp  erf.cpp  exp.cpp  floor.cpp  fmod.cpp  isclose.cpp  isfinite.cpp  isinf.cpp  isnan.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  lshift.cpp  max.cpp  min.cpp  mul.cpp  neg.cpp  pow.cpp  relu.cpp  round.cpp  rshift.cpp  rsqrt.cpp  sign.cpp  sin.cpp  sinh.cpp  sqrt.cpp  sub.cpp  tan.cpp  (+2 more)
samples/vector/: vector_abs.cpp  vector_acos.cpp  vector_acosh.cpp  vector_add.cpp  vector_asin.cpp  vector_asinh.cpp  vector_atan.cpp  vector_atanh.cpp  vector_cast.cpp  vector_ceil.cpp  vector_cos.cpp  vector_cosh.cpp  vector_div.cpp  vector_eq.cpp  vector_erf.cpp  vector_exp.cpp  vector_floor.cpp  vector_ge.cpp  vector_gt.cpp  vector_le.cpp  vector_log.cpp  vector_lt.cpp  vector_max.cpp  vector_min.cpp  vector_mod.cpp  vector_mul.cpp  vector_ne.cpp  vector_neg.cpp  vector_pow.cpp  vector_round.cpp  vector_rsqrt.cpp  vector_select.cpp  vector_sign.cpp  vector_sin.cpp  vector_sinh.cpp  vector_sqrt.cpp  vector_sub.cpp  vector_tan.cpp  vector_tanh.cpp  vector_trunc.cpp
sycl/: CMakeLists.txt  ReleaseNotes.md
sycl/doc/: EnvironmentVariables.md
sycl/plugins/: CMakeLists.txt
sycl/plugins/cnrt/: CMakeLists.txt  pi_cnrt.cpp  pi_cnrt.hpp
sycl/source/: backend.cpp  device_selector.cpp  handler.cpp
sycl/test/: CMakeLists.txt
sycl/tools/: CMakeLists.txt
(+231 files in other folders)
